[+] Styles: Social Icons [$] Sass/Gulp: Ajustes

--- a/src/assets/scss/master.scss
+++ b/src/assets/scss/master.scss
@@ -1,5 +1,7 @@
+@import 'base/base';
 @import 'abstracts/abstracts';
-@import 'debug/debug';
 @import 'layout/layout';
 @import 'components/components';
 @import 'vendors/vendors';
+
+@import 'debug/debug';
