--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -1,21 +1,20 @@
 // Reset/Normalize
-html {
-    box-sizing: border-box;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
+
 body {
-    display: flex;
-    flex-direction: column;
+    //font-family: 'Dosis', sans-serif;
     font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+
+    h1, h2 ,h3, h4, h5, h6, hr {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+
+    hgroup {
+        margin: 0;
+        padding: 0;
+    }
+
 }
 
-html,
-body,
-ul,
-ol,
-li {
-  margin:  0;
-  padding: 0;
-}
