--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -3,18 +3,18 @@
 body {
     //font-family: 'Dosis', sans-serif;
     font-family: 'Rubik', sans-serif;
-    font-size: 14px;
-
-    h1, h2 ,h3, h4, h5, h6, hr {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-    }
-
-    hgroup {
-        margin: 0;
-        padding: 0;
-    }
-
+    font-size: 14px/16px;
 }
+
+h1, h2 ,h3, h4, h5, h6, hr {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+hgroup {
+    margin: 0;
+    padding: 0;
+}
+
 
