--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -4,12 +4,12 @@ body {
     //font-family: 'Dosis', sans-serif;
     font-family: 'Rubik', sans-serif;
     font-size: 14px/16px;
+    color: #8F849C;
 }
 
-h1, h2 ,h3, h4, h5, h6, hr {
+h1, h2 ,h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
-    text-align: center;
 }
 
 hgroup {
