--- a/src/assets/scss/components/_info.scss
+++ b/src/assets/scss/components/_info.scss
@@ -6,6 +6,7 @@
     }
 
     h3 {
+        color: #523D6C;
         font-size: .8rem;
         font-weight: 700;
         text-transform: uppercase;
@@ -16,7 +17,6 @@
     }
 
     h3, p {
-        color: lighten( #262626, 15% );
         margin: 0;
         padding: 0 1rem;
         text-align: center;
