--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,11 +1,19 @@
 .footer {
-    border-top: 6px solid rgba(26, 113, 177, 1);
 
     &__top {
-        background-color: #F3F3F5; 
+        background-color: #F8F5F2; 
+        padding: 2.8rem 0;
 
         .widgets {
-            padding: 3.6rem 0;
+
+            h2 {
+                font-size: 1.6rem;
+                line-height: 1.7rem;
+            }
+            h3 {
+                font-size: 1.2rem;
+            }
+
         }
     }
     &__bottom {
@@ -17,8 +25,8 @@
     }
 
     ul {
-        margin: 0;
-        padding: 0;
+        //margin: 0;
+        padding-left: 0;
 
         li {
             list-style: none;
