--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    border-top: 6px solid rgba(26, 113, 177, 1);
+    border-top: 6px solid #1a71b1;
     display: flex;
     flex-direction: column;
     
