[+] Section: Nuestros Servicios > Ajusta icono, dimensiones Carousel

--- a/src/assets/scss/master.scss
+++ b/src/assets/scss/master.scss
@@ -2,6 +2,7 @@
 @import 'abstracts/abstracts';
 @import 'layout/layout';
 @import 'components/components';
+@import 'sections/sections';
 @import 'vendors/vendors';
 
 @import 'debug/debug';
