--- a/src/assets/scss/sections/_our-services.scss
+++ b/src/assets/scss/sections/_our-services.scss
@@ -1,49 +1,15 @@
+.our-services {
+    margin: 3rem 0;
 
+    hgroup {
+        margin-bottom: 2rem;
+        text-align: center;
 
-    .carousel {
-        background-color: green;
-
-        .carousel-item {
-            background-color: greenyellow;
-            border: 1px solid blue;
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-
-            .card {
-                background-color: pink;
-                border: 1px solid red;
-                box-sizing: border-box;
-                margin: 0 .5rem;
-                text-align: center;
-
-                &--image {
-                    position: relative;
-                    top: 0;
-                    left: 0;
-                }
-
-                &--icon {
-                    background-color: #FFFFFF;
-                    border-radius: 2rem;
-                    margin: 0 auto;
-                    padding: .5rem;
-                    position: absolute;
-                    left: 0;
-                    right: 0;
-                    top: 0;
-                    bottom: 0;
-                    margin-left: auto;
-                    margin-right: auto;
-                    margin-top: auto;
-                    margin-bottom: auto;
-                    width: 3.4rem;
-                    height: 3.4rem;
-                }
-
-                &-title {
-                    font-weight: 700;
-                }
-            }
+        h2 {
+            font-size: 3.4rem;    
+        }
+        h3 {
+            font-size: 2.2rem;    
         }
     }
+}
