[+] Styles: Ajustes generales

--- a/src/assets/scss/components/_carousel.scss
+++ b/src/assets/scss/components/_carousel.scss
@@ -14,7 +14,8 @@
             }
 
             &-title {
-                color: #523D6C;
+                color: #f77a7a;
+                font-family: 'Nunito', sans-serif;
                 font-weight: 700;
             }
 
