--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -24,12 +24,17 @@
         }
     }
 
-    ul {
-        //margin: 0;
-        padding-left: 0;
-
-        li {
-            list-style: none;
+    .menu {
+        &-main {
+            
+            ul {
+                margin: 0;
+                padding-left: 0;
+        
+                li {
+                    list-style: none;
+                }
+            }
         }
     }
 }
