--- a/src/assets/scss/master.scss
+++ b/src/assets/scss/master.scss
@@ -3,6 +3,7 @@
 @import 'layout/layout';
 @import 'components/components';
 @import 'sections/sections';
+@import 'pages/pages';
 @import 'vendors/vendors';
 
 @import 'debug/debug';
