--- a/src/assets/scss/pages/service.scss
+++ b/src/assets/scss/pages/service.scss
@@ -1,4 +1,9 @@
 .page {
+
+    h2 {
+        font-size: 2.4rem;
+    }
+
     &-header {
         position: relative;
     }
@@ -8,9 +13,17 @@
         padding: 1rem 2rem 1rem .2rem;
         position: absolute;
         z-index: 10;
+        
+        h2 {
+            font-size: 3rem;
+        }
+        h3 {
+            font-size: 2rem;
+        }
     }
 
     &-service {
+
         .outstanding-image {
             position: relative;
         }
