--- a/src/assets/scss/debug/_carousel.scss
+++ b/src/assets/scss/debug/_carousel.scss
@@ -1,15 +1,15 @@
 .carousel {
-    background-color: green;
+    //background-color: green;
 
     .carousel-item {
-        background-color: greenyellow;
-        border: 1px solid blue;
-        box-sizing: border-box;
+        //background-color: greenyellow;
+        //border: 1px solid blue;
+        //box-sizing: border-box;
 
         .card {
-            background-color: pink;
-            border: 1px solid red;
-            box-sizing: border-box;
+            //background-color: pink;
+            //border: 1px solid red;
+            //box-sizing: border-box;
         }
     }
 }
