--- a/src/assets/scss/layout/elements/_elements.scss
+++ b/src/assets/scss/layout/elements/_elements.scss
@@ -16,6 +16,12 @@ p, ul {
     margin-top: 1rem;
 }
 
+section {
+    .container{
+        padding: 1rem 0 3rem 0;
+    }
+}
+
 
 @import 'hgroups';
 @import 'lists';
