--- a/src/assets/scss/sections/_our-services.scss
+++ b/src/assets/scss/sections/_our-services.scss
@@ -1,8 +1,7 @@
 .our-services {
-    margin: 3rem 0;
+    background-color: #F8F5F2;
 
     hgroup {
-        margin-bottom: 2rem;
         text-align: center;
 
         h2 {
