[+] Us > Styles: Ajustes RWD

--- a/src/assets/scss/debug/_debug.scss
+++ b/src/assets/scss/debug/_debug.scss
@@ -1,3 +1,8 @@
+* {
+    border: 1px dotted orangered;
+    box-sizing: border-box;
+}
+
 @import 'php';
 //@import 'carousel';
 //@import 'section-us';
