--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -46,6 +46,11 @@
 
             .row {
                 padding: 0 1.2rem;
+                margin-right: 0;
+
+                @include media-md {
+                    margin-right: -15px;
+                }
             }
         }
 
@@ -106,6 +111,14 @@
         .container {
             padding: 0 !important;
             max-width: 100%;
+
+            .row {
+                margin-right: 0;
+
+                @include media-md {
+                    margin-right: -15px;
+                }
+            }
         }
 
         ul { 
