--- a/src/assets/scss/components/_info.scss
+++ b/src/assets/scss/components/_info.scss
@@ -6,10 +6,9 @@
     }
 
     h3 {
-        color: #523D6C;
+        color: #f77a7a;
         font-size: .8rem;
         font-weight: 700;
-        text-transform: uppercase;
     }
 
     p {
@@ -19,7 +18,6 @@
     h3, p {
         margin: 0;
         padding: 0 1rem;
-        text-align: center;
     }
 
     @include media-md {
