--- a/src/assets/scss/sections/_sections.scss
+++ b/src/assets/scss/sections/_sections.scss
@@ -1,2 +1,10 @@
+section {
+    .container {
+        >  hgroup {
+            padding-bottom: 1rem;
+        }
+    }
+}
+
 @import 'our-services';
 @import 'us';
