[+] Footer > Styles: Ajustes RWD

--- a/src/assets/scss/debug/_debug.scss
+++ b/src/assets/scss/debug/_debug.scss
@@ -1,6 +1,6 @@
 * {
-    //border: 1px dotted orangered;
-    //box-sizing: border-box;
+    border: 1px dotted orangered;
+    box-sizing: border-box;
 }
 
 @import 'php';
