--- a/src/assets/scss/components/_carousel.scss
+++ b/src/assets/scss/components/_carousel.scss
@@ -8,6 +8,7 @@
             line-height: 1.4rem;
             margin: 0 .4rem;
             text-align: center;
+            padding: 0;
 
             &-body {
                 background-color: #1a71b1;
