--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
 
     &__top {
-        background-color: #F8F5F2; 
+
         padding: 2.8rem 0;
 
         .widgets {
@@ -28,11 +28,15 @@
         &-main {
             
             ul {
-                margin: 0;
+                margin: 0 auto;
                 padding-left: 0;
         
                 li {
                     list-style: none;
+
+                    a {
+                        padding: .5rem;
+                    }
                 }
             }
         }
