--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 
     &__top {
 
-        padding: 2.8rem 0;
+        padding: 2rem 0;
 
         .widgets {
 
@@ -14,6 +14,13 @@
                 font-size: 1.2rem;
             }
 
+        }
+
+        .row {
+            .container {
+                padding-right: 0;
+                padding-left: 0;
+            }
         }
     }
     &__bottom {
