[*] Page > Page: Estructura del Theme (Styles)

--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -3,8 +3,12 @@
 body {
     //font-family: 'Dosis', sans-serif;
     font-family: 'Rubik', sans-serif;
-    font-size: 14px/16px;
+    font-size: 1.2rem;
     color: #8F849C;
+
+    @include media-md {
+        font-size: 1rem;
+    }
 }
 
 h1, h2 ,h3, h4, h5, h6 {
