--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -45,7 +45,7 @@
             max-width: 100%;
 
             .row {
-                padding: 0 1.2rem;
+                padding: 0;
                 margin-right: 0;
 
                 @include media-md {
